# eark-validator

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pr.yaml  python-publish.yml  python-test.yml
eark_validator/: __init__.py  const.py  mets.py  packages.py  rules.py  structure.py  utils.py
eark_validator/cli/: __init__.py  app.py
eark_validator/infopacks/: checksummer.py  information_package.py  manifest.py  package_handler.py
eark_validator/ipxml/: __init__.py  namespaces.py  schematron.py
eark_validator/ipxml/resources/: __init__.py
eark_validator/ipxml/resources/profiles/: __init__.py
eark_validator/ipxml/resources/schema/: __init__.py  mets.csip.local.v2-0.xsd  mets.profile.local.v2-0.xsd  mets.xsd
eark_validator/ipxml/resources/schematron/: __init__.py
eark_validator/ipxml/resources/schematron/CSIP/: mets_fileSec_rules.xml  mets_metsHdr_rules.xml  mets_structMap_rules.xml
eark_validator/ipxml/resources/schematron/DIP/: mets_metsHdr_rules.xml
eark_validator/ipxml/resources/schematron/SIP/: mets_metsRootElement_rules.xml
eark_validator/ipxml/resources/schematron/V2.0.4/CSIP/: mets_amdSec_rules.xml  mets_dmdSec_rules.xml  mets_metsHdr_rules.xml  mets_metsRootElement_rules.xml  mets_structMap_rules.xml
eark_validator/ipxml/resources/schematron/V2.0.4/DIP/: mets_fileSec_rules.xml  (+1 more)
eark_validator/ipxml/resources/vocabs/: CSIPVocabularyAgentOtherType.xml  CSIPVocabularyStatus.xml  DILCISVocabulariesSIP.xml  IANA.txt  __init__.py  x.py
eark_validator/model/: __init__.py  checksum.py  checksum_alg.py  constants.py  level.py  manifest.py  metadata.py  mimetype.py  package_details.py  representation.py  severity.py  specifications.py  struct_results.py  struct_status.py  test_result.py  validation_report.py
eark_validator/specifications/: __init__.py  specification.py  struct_reqs.py
eark_validator/xml/: schematron.py
ip_validation/: __init__.py  config.py  const.py  controller.py  mets.py  rules.py  structure.py  utils.py  validator.py  webapp.py
ip_validation/cli/: __init__.py  app.py  corpora.py  testcases.py
ip_validation/cli/resources/: testCase.xsd
ip_validation/cli/templates/: base.html  case.html  corpus.html  home.html  package.html  page.html  skipped.html
ip_validation/infopacks/: __init__.py  information_package.py  manifest.py  mets.py  rules.py  specification.py  struct_errors.py  struct_reqs.py  structure.py
ip_validation/infopacks/resources/: __init__.py
ip_validation/infopacks/resources/schematron/: mets_amd_rules.xml  mets_dmd_rules.xml  mets_root_rules.xml  mets_structmap_rules.xml
ip_validation/infopacks/resources/schematron/CSIP/: mets_root_rules.xml
ip_validation/infopacks/resources/xml/schema/: mets.csip.local.v2-0.xsd  mets.profile.local.v2-0.xsd  mets.sip.local.v2-0.xsd
ip_validation/resources/: validation_rules.xml
ip_validation/resources/schematron/: mets_amd_rules.xml  mets_dmd_rules.xml  mets_file_rules.xml  mets_hdr_rules.xml  mets_root_rules.xml
ip_validation/specifications/: specification.py
ip_validation/static/js/: BinaryGet.js  ip-validation.js  rest-client.js
ip_validation/templates/: home.html  navbar.html  page.html  validate.html
ip_validation/xml/: __init__.py  namespaces.py  schema.py  schematron.py
ip_validation/xml/resources/: __init__.py
ip_validation/xml/resources/schema/: mets.profile.v2-0.xsd  mets.sip.local.v2-0.xsd  xhtml1-strict.xsd
ip_validation/xml/resources/schematron/SIP/: mets_metsHdr_rules.xml
ip_validation/xml/resources/vocabs/: CSIPVocabularyFileGrpAndStructMapDivisionLabel.xml  CSIPVocabularyOAISPackageType.xml  CSIPVocabularyStructMapType.xml  SIPVocabularyRecordIDType.xml  SIPVocabularyRecordStatus.xml
ip_validation/xml/resources/xml/schema/: mets.csip.local.v2-0.xsd  mets.sip.local.v2-0.xsd
ip_validation/xml/resources/xml/vocabs/: CSIPVocabularyContentInformationType.xml
tests/: __init__.py  archive_handler_test.py  ips_test.py  manifests_test.py  mets_test.py  namespaces_test.py  rules_test.py  schematron_test.py  specification_test.py  structure_test.py  test_archive_handler.py  test_manifest_class.py  test_manifests.py  test_mets.py  test_rules.py  test_specification.py  test_structure.py  utils.py  utils_test.py
tests/resources/: aip.json
tests/resources/ips/minimal/: minimal_IP_with_schemas.tar
tests/resources/ips/unpacked/: __init__.py
tests/resources/ips/unpacked/733dc055-34be-4260-85c7-5549a7083031/: METS.xml
tests/resources/ips/unpacked/733dc055-34be-4260-85c7-5549a7083031-bad/: METS.xml  aip.json
tests/resources/json/: __init__.py  commons-ip-invalid.json  commons-ip-report.json
tests/resources/schematron/: METS-one-default-ns.xml  __init__.py  person.xml
tests/resources/xml/: METS-hdr-no-type.xml  METS-hdr-no-version.xml  METS-no-createdate.xml  METS-no-hdr.xml  METS-no-objid.xml  METS-no-profile.xml  METS-no-root.xml  METS-no-structmap.xml  METS-no-type.xml  METS-other-type.xml  METS-ownerid.xml  METS-valid.xml  invalid-person.xml  person.xml
(+43 files in other folders)
