[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "eark-ip-validation"
dynamic = ["version"]
authors = [
  { name="Carl Wilson", email="carl@openpreservation.org" },
]
maintainers = [
  { name="Carl Wilson", email="carl@openpreservation.org" },
]
license = {file = "LICENSE"}
description = "E-ARK Python Information Package validation library."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml==4.9.3",
    "importlib_resources==5.12.0",
]
[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest",
    "pylint",
    "pytest-cov",
    'pytest-runner',
]
[project.urls]
"Homepage" = "https://github.com/E-ARK-Software/py-eark-ip-validator"
"Bug Tracker" = "https://github.com/E-ARK-Software/py-eark-ip-validator/issues"
"Repository" = "https://github.com/E-ARK-Software/py-eark-ip-validator.git"
[project.scripts]
ip-check = "ip_validation.cli.app:main"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.dev{env:GITHUB_RUN_NUMBER:{ccount}}"
dirty_template = "{tag}.dev{env:GITHUB_RUN_NUMBER:{ccount}}+git.{sha}.dirty"
